@@ -15,7 +15,6 @@ import static org.sosy_lab.java_smt.test.ProverEnvironmentSubject.assertThat;
 import com.google.common.collect.ImmutableList;
 import com.google.common.truth.Truth;
 import java.util.Collection;
-import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -385,7 +384,7 @@ public class SolverThreadLocalityTest extends SolverBasedTest0.ParameterizedSolv
     // Boolector and Bitwuzla do not support integers, so we have to use two different versions
     // for this test.
     BooleanFormula formula =
-        List.of(Solvers.BOOLECTOR, Solvers.BITWUZLA).contains(solverToUse())
+        ImmutableList.of(Solvers.BOOLECTOR, Solvers.BITWUZLA).contains(solverToUse())
             ? bmgr.makeFalse()
             : hardProblem.generate(DEFAULT_PROBLEM_SIZE);
 
